--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -1,6 +1,7 @@
 FROM python:3.9.13
 
-RUN pip3 install yummy[ray]==0.0.3 cleora==1.2.3 scikit-learn pyarrow 
+RUN pip3 install yummy[polars] cleora==1.2.3 s3fs boto3 jupyter rise
+RUN pip3 install scikit-learn
 
 # CREATE USER
 RUN useradd -ms /bin/bash jovyan
@@ -10,5 +11,4 @@ ARG NB_GID=100
 
 USER 1000
 WORKDIR /home/jovyan
-
 CMD /bin/bash
